panama-src/genai/ffi/genai/ort_genai_c_h.java


    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * OgaResult *OgaConfigOverlay(OgaConfig *config, const char *json)
     * }
     */
    public static MethodHandle OgaConfigOverlay$handle() {
        return OgaConfigOverlay.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * OgaResult *OgaConfigOverlay(OgaConfig *config, const char *json)
     * }
     */
    public static MemorySegment OgaConfigOverlay$address() {
        return OgaConfigOverlay.ADDR;
    }

    /**
     * {@snippet lang=c :
     * OgaResult *OgaConfigOverlay(OgaConfig *config, const char *json)
     * }
     */
    public static MemorySegment OgaConfigOverlay(MemorySegment config, MemorySegment json) {
        var mh$ = OgaConfigOverlay.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaConfigOverlay", config, json);
            }
            return (MemorySegment)mh$.invokeExact(config, json);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaCreateModel {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaCreateModel");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * OgaResult *OgaCreateModel(const char *config_path, OgaModel **out)
     * }
     */
    public static FunctionDescriptor OgaCreateModel$descriptor() {
        return OgaCreateModel.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * OgaResult *OgaCreateModel(const char *config_path, OgaModel **out)
     * }
     */
    public static MethodHandle OgaCreateModel$handle() {
        return OgaCreateModel.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * OgaResult *OgaCreateModel(const char *config_path, OgaModel **out)
     * }
     */
    public static MemorySegment OgaCreateModel$address() {
        return OgaCreateModel.ADDR;
    }

    /**
     * {@snippet lang=c :
     * OgaResult *OgaCreateModel(const char *config_path, OgaModel **out)
     * }
     */
    public static MemorySegment OgaCreateModel(MemorySegment config_path, MemorySegment out) {
        var mh$ = OgaCreateModel.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaCreateModel", config_path, out);
            }
            return (MemorySegment)mh$.invokeExact(config_path, out);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaCreateModelFromConfig {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaCreateModelFromConfig");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * OgaResult *OgaCreateModelFromConfig(const OgaConfig *config, OgaModel **out)
     * }
     */
    public static FunctionDescriptor OgaCreateModelFromConfig$descriptor() {
        return OgaCreateModelFromConfig.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * OgaResult *OgaCreateModelFromConfig(const OgaConfig *config, OgaModel **out)
     * }
     */
    public static MethodHandle OgaCreateModelFromConfig$handle() {
        return OgaCreateModelFromConfig.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * OgaResult *OgaCreateModelFromConfig(const OgaConfig *config, OgaModel **out)
     * }
     */
    public static MemorySegment OgaCreateModelFromConfig$address() {
        return OgaCreateModelFromConfig.ADDR;
    }

    /**
     * {@snippet lang=c :
     * OgaResult *OgaCreateModelFromConfig(const OgaConfig *config, OgaModel **out)
     * }
     */
    public static MemorySegment OgaCreateModelFromConfig(MemorySegment config, MemorySegment out) {
        var mh$ = OgaCreateModelFromConfig.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaCreateModelFromConfig", config, out);
            }
            return (MemorySegment)mh$.invokeExact(config, out);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaCreateModelWithRuntimeSettings {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaCreateModelWithRuntimeSettings");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * OgaResult *OgaCreateModelWithRuntimeSettings(const char *config_path, const OgaRuntimeSettings *settings, OgaModel **out)
     * }
     */
    public static FunctionDescriptor OgaCreateModelWithRuntimeSettings$descriptor() {
        return OgaCreateModelWithRuntimeSettings.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * OgaResult *OgaCreateModelWithRuntimeSettings(const char *config_path, const OgaRuntimeSettings *settings, OgaModel **out)
     * }
     */
    public static MethodHandle OgaCreateModelWithRuntimeSettings$handle() {
        return OgaCreateModelWithRuntimeSettings.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * OgaResult *OgaCreateModelWithRuntimeSettings(const char *config_path, const OgaRuntimeSettings *settings, OgaModel **out)
     * }
     */
    public static MemorySegment OgaCreateModelWithRuntimeSettings$address() {
        return OgaCreateModelWithRuntimeSettings.ADDR;
    }

    /**
     * {@snippet lang=c :
     * OgaResult *OgaCreateModelWithRuntimeSettings(const char *config_path, const OgaRuntimeSettings *settings, OgaModel **out)
     * }
     */
    public static MemorySegment OgaCreateModelWithRuntimeSettings(MemorySegment config_path, MemorySegment settings, MemorySegment out) {
        var mh$ = OgaCreateModelWithRuntimeSettings.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaCreateModelWithRuntimeSettings", config_path, settings, out);
            }
            return (MemorySegment)mh$.invokeExact(config_path, settings, out);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaModelGetType {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaModelGetType");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * OgaResult *OgaModelGetType(const OgaModel *model, const char **out)
     * }
     */
    public static FunctionDescriptor OgaModelGetType$descriptor() {
        return OgaModelGetType.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * OgaResult *OgaModelGetType(const OgaModel *model, const char **out)
     * }
     */
    public static MethodHandle OgaModelGetType$handle() {
        return OgaModelGetType.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * OgaResult *OgaModelGetType(const OgaModel *model, const char **out)
     * }
     */
    public static MemorySegment OgaModelGetType$address() {
        return OgaModelGetType.ADDR;
    }

    /**
     * {@snippet lang=c :
     * OgaResult *OgaModelGetType(const OgaModel *model, const char **out)
     * }
     */
    public static MemorySegment OgaModelGetType(MemorySegment model, MemorySegment out) {
        var mh$ = OgaModelGetType.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaModelGetType", model, out);
            }
            return (MemorySegment)mh$.invokeExact(model, out);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaModelGetDeviceType {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaModelGetDeviceType");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * OgaResult *OgaModelGetDeviceType(const OgaModel *model, const char **out)
     * }
     */
    public static FunctionDescriptor OgaModelGetDeviceType$descriptor() {
        return OgaModelGetDeviceType.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * OgaResult *OgaModelGetDeviceType(const OgaModel *model, const char **out)
     * }
     */
    public static MethodHandle OgaModelGetDeviceType$handle() {
        return OgaModelGetDeviceType.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * OgaResult *OgaModelGetDeviceType(const OgaModel *model, const char **out)
     * }
     */
    public static MemorySegment OgaModelGetDeviceType$address() {
        return OgaModelGetDeviceType.ADDR;
    }

    /**
     * {@snippet lang=c :
     * OgaResult *OgaModelGetDeviceType(const OgaModel *model, const char **out)
     * }
     */
    public static MemorySegment OgaModelGetDeviceType(MemorySegment model, MemorySegment out) {
        var mh$ = OgaModelGetDeviceType.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaModelGetDeviceType", model, out);
            }
            return (MemorySegment)mh$.invokeExact(model, out);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaDestroyConfig {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaDestroyConfig");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void OgaDestroyConfig(OgaConfig *config)
     * }
     */
    public static FunctionDescriptor OgaDestroyConfig$descriptor() {
        return OgaDestroyConfig.DESC;
    }
